--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <a href="mainmenu.html" class="nav-link">Main Menu</a>
         </div>
         <div class="header-block">
-            <img src="logo.png" alt="Logo" class="logo">
+            <img src="LOGO.png" alt="Logo" class="logo">
             <DIv class="clickable-box"><h1>TARANNUM</h1></DIv>
         </div>
         <br>
